<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_menu"
        android:icon="@drawable/menu_selector"
        android:title="@string/menu_bottomMenu" />

    <item
        android:id="@+id/bottom_events"
        android:icon="@drawable/events_selector"
        android:title="@string/events_bottomMenu" />

    <item
        android:id="@+id/bottom_clubs"
        android:icon="@drawable/clubs_selector"
        android:title="@string/clubs_bottomMenu" />

    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/profile_selector"
        android:title="Профиль" />

<!--    <item-->
<!--        android:id="@+id/bottom_contacts"-->
<!--        android:icon="@drawable/contacts_selector"-->
<!--        android:title="@string/contacts_bottomMenu"/>-->

<!--    <item-->
<!--        android:id="@+id/bottom_weather"-->
<!--        android:icon="@drawable/weather_selector"-->
<!--        android:title="Погода"/>-->

<!--    <item-->
<!--        android:id="@+id/bottom_menu"-->
<!--        android:icon="@drawable/menu_selector"-->
<!--        android:title="@string/menu_bottomMenu" />-->

</menu>